# myLocalTTS

./: .gitignore  Cargo.toml  README.md  tts_config.txt
src/: audio.rs  clipboard.rs  main.rs  narrate.rs  transcribe.rs
