[package]
name = "local_tts_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
# Global hotkey handling
inputbot = "0.6"
# Audio input
cpal = "0.15"
# Audio processing
hound = "3.5"
rubato = "0.14" # Resampling for Whisper (Whisper needs 16kHz)
# Clipboard
arboard = "3.3"
# Keyboard simulation (Paste)
enigo = "0.2"
# Whisper - using CLI (whisper-rs requires LLVM to build)

[build-dependencies]
# Ensure we can link if needed
